[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://CanvasLayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://sound/bgm.ogg" type="AudioStream" id=5]
[ext_resource path="res://sound/game over.wav" type="AudioStream" id=6]
[ext_resource path="res://sound/get hit.wav" type="AudioStream" id=7]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1.30502, 4.26208, 0, 0, 0, 0, 4.97888, 3.24541, 0, 0, 0, 0, 471.626, 3.4948, 0, 0, 0, 0, 475.236, 715.566, 0, 0, 0, 0, 7.7421, 710.151, 0, 0, 0, 0, 4.13211, 8.00729 )
}

[node name="Node" type="Node"]

script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="Player" parent="." index="0" instance=ExtResource( 3 )]

_sections_unfolded = [ "Material", "Pause", "Transform", "Visibility" ]

[node name="MobTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="ScoreTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="StartTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="StartPosition" type="Position2D" parent="." index="4"]

position = Vector2( 240, 450 )
_sections_unfolded = [ "Transform" ]

[node name="MobPath" type="Path2D" parent="." index="5"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath" index="0"]

position = Vector2( 1.30502, 4.26208 )
rotation = -0.221446
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="HUD" parent="." index="6" instance=ExtResource( 4 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="7"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 0.5
autoplay = true
mix_target = 0
bus = "Master"
_sections_unfolded = [ "Pause" ]

[node name="GameStart" type="AudioStreamPlayer" parent="." index="8"]

pause_mode = 1
stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"
_sections_unfolded = [ "Pause" ]

[node name="GameOver" type="AudioStreamPlayer" parent="." index="9"]

stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"
_sections_unfolded = [ "Pause" ]

[node name="GetHit" type="AudioStreamPlayer" parent="." index="10"]

stream = ExtResource( 7 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="hit" from="Player" to="." method="get_hit"]

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]

[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]

[connection signal="start_game" from="HUD" to="." method="start_game"]


